style the hero, prepare to adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -94,11 +94,11 @@
             </li>
           </ul>
           <div class="hero__actions">
-            <button class="hero__button button button--blue" type="button"
+            <button class="hero__button button button--small button--blue" type="button"
               aria-label="Открыть всплывающее окно с формой заказа">
               Заказать
             </button>
-            <a class="hero__button button button--white" href="/">
+            <a class="hero__button button button--small button--white" href="/">
               Подробнее
             </a>
           </div>
