--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,11 @@
             </li>
           </ul>
         </nav>
+        <button class="header__burger burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </div>
     </header>
     <main class="page__main main">
