make first scratch of the scheme

--- a/app/index.html
+++ b/app/index.html
@@ -121,80 +121,96 @@
             Перед заполнением формы ознакомьтесь с нашей схемой работы!
           </p>
           <ul class="order__scheme scheme">
-            <li class="scheme__step scheme__step--5">
+            <li class="scheme__step scheme__step--1">
               <div class="scheme__item">
-                <svg class="scheme__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <use xlink:href="images/sprite.svg#"></use>
-                </svg>
+                <div class="scheme__wrapper">
+                  <span></span>
+                  <span></span>
+                  <div class="scheme__elem">
+                    <svg class="scheme__icon scheme__icon--lupe" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                      <use xlink:href="images/sprite.svg#lupe"></use>
+                    </svg>
+                  </div>
+                  <span></span>
+                  <span></span>
+                </div>
                 <span class="scheme__desc">
                   Lorem ipsum dolor sit amet
                 </span>
               </div>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
             </li>
             <li class="scheme__step scheme__step--2">
               <div class="scheme__item">
-                <svg class="scheme__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <use xlink:href="images/sprite.svg#"></use>
-                </svg>
+                <div class="scheme__wrapper">
+                  <span></span>
+                  <span></span>
+                  <div class="scheme__elem">
+                    <svg class="scheme__icon scheme__icon--percent" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                      <use xlink:href="images/sprite.svg#percent"></use>
+                    </svg>
+                  </div>
+                  <span></span>
+                  <span></span>
+                </div>
                 <span class="scheme__desc">
                   Сonsecteturadipiscing elit
                 </span>
               </div>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
+
             </li>
             <li class="scheme__step scheme__step--3">
               <div class="scheme__item">
-                <svg class="scheme__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <use xlink:href="images/sprite.svg#"></use>
-                </svg>
+                <div class="scheme__wrapper">
+                  <span></span>
+                  <span></span>
+                  <div class="scheme__elem">
+                    <svg class="scheme__icon scheme__icon--new-doc" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                      <use xlink:href="images/sprite.svg#new-doc"></use>
+                    </svg>
+                  </div>
+                  <span></span>
+                  <span></span>
+                </div>
                 <span class="scheme__desc">
                   Sed do eiusmod tempor
                 </span>
               </div>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
             </li>
             <li class="scheme__step scheme__step--4">
               <div class="scheme__item">
-                <svg class="scheme__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <use xlink:href="images/sprite.svg#"></use>
-                </svg>
+                <div class="scheme__wrapper">
+                  <span></span>
+                  <span></span>
+                  <div class="scheme__elem">
+                    <svg class="scheme__icon scheme__icon--mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                      <use xlink:href="images/sprite.svg#mail"></use>
+                    </svg>
+                  </div>
+                  <span></span>
+                  <span></span>
+                </div>
                 <span class="scheme__desc">
                   Esse cillum dolore eu fugiat
                 </span>
               </div>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
             </li>
             <li class="scheme__step scheme__step--5">
               <div class="scheme__item">
-                <svg class="scheme__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <use xlink:href="images/sprite.svg#"></use>
-                </svg>
+                <div class="scheme__wrapper">
+                  <span></span>
+                  <span></span>
+                  <div class="scheme__elem">
+                    <svg class="scheme__icon scheme__icon--money" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                      <use xlink:href="images/sprite.svg#money"></use>
+                    </svg>
+                  </div>
+                  <span></span>
+                  <span></span>
+                </div>
                 <span class="scheme__desc">
                   Excepteur sint occaecat cupidatat non proident
                 </span>
               </div>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
             </li>
           </ul>
           <form class="order__form form" method="POST" action="send_form.php" enctype="multipart/form-data">
