done with the scheme, begin stylize form

--- a/app/index.html
+++ b/app/index.html
@@ -138,6 +138,11 @@
                   Lorem ipsum dolor sit amet
                 </span>
               </div>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
             </li>
             <li class="scheme__step scheme__step--2">
               <div class="scheme__item">
@@ -156,7 +161,11 @@
                   Сonsecteturadipiscing elit
                 </span>
               </div>
-
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
             </li>
             <li class="scheme__step scheme__step--3">
               <div class="scheme__item">
@@ -175,6 +184,11 @@
                   Sed do eiusmod tempor
                 </span>
               </div>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
             </li>
             <li class="scheme__step scheme__step--4">
               <div class="scheme__item">
@@ -193,6 +207,11 @@
                   Esse cillum dolore eu fugiat
                 </span>
               </div>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
             </li>
             <li class="scheme__step scheme__step--5">
               <div class="scheme__item">
@@ -216,7 +235,7 @@
           <form class="order__form form" method="POST" action="send_form.php" enctype="multipart/form-data">
             <div class="form__field">
               <label class="form__label">
-                <select class="form__select" name="type" placeholder="Выберите тип системы">
+                <select class="form__select select" name="type" placeholder="Выберите тип системы">
                   <option class="form__select-option" value="Sed ut perspiciatis">
                     Sed ut perspiciatis
                   </option>
