--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,7 @@
             <div class="form__field">
               <label class="form__label">
                 <select class="form__select select" name="type" placeholder="Выберите тип системы">
+                  <option value="" selected>Выберите число</option>
                   <option class="form__select-option" value="Sed ut perspiciatis">
                     Sed ut perspiciatis
                   </option>
