done with the input range

--- a/app/index.html
+++ b/app/index.html
@@ -282,8 +282,9 @@
               <span class="form__name">
                 Sed ut perspiciatis, unde omnis iste natus
               </span>
+              <span class="form__value">75</span>
               <label class="form__label">
-                <input class="form__input form__input--range" name="range" type="range">
+                <input class="form__range" name="range" type="range" min="0" max="100" value="75">
               </label>
             </div>
             <div class="form__field">
