add meta information in the index file

--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,23 @@
 <!-- When JS is active we remove this class -->
 
 <head>
-  <title>FILE_NAME</title>
+  <title>Loremipusm</title>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta name="format-detection" content="telephone=no">
-  <meta name="description" content="">
+  <meta name="description" content="At vero eos et accusamus et iusto odio dignissimos ducimus!">
   <meta name="keywords" content="">
   <!--<meta name="robots" content="noindex, nofollow" /> -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta name="twitter:card" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:image" content="">
+  <meta property="og:title" content="Loremipsum.net">
+  <meta property="og:site_name" content="Loremipsum">
+  <meta property="og:url" content="https://pow44feet.github.io/loremipsum/">
+  <meta property="og:image" content="https://camo.githubusercontent.com/6bbea9a9aa52b24f7d3a1d56ab7855db445180a7/68747470733a2f2f63646e2d696d616765732d312e6d656469756d2e636f6d2f6d61782f313630302f312a7453797576335a5243667353443561584237763844512e706e67">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Loremipsum">
+  <meta name="twitter:description" content="At vero eos et accusamus et iusto odio dignissimos ducimus!">
+  <meta name="twitter:site" content="https://pow44feet.github.io/loremipsum/">
+  <meta name="twitter:image" content="https://camo.githubusercontent.com/6bbea9a9aa52b24f7d3a1d56ab7855db445180a7/68747470733a2f2f63646e2d696d616765732d312e6d656469756d2e636f6d2f6d61782f313630302f312a7453797576335a5243667353443561584237763844512e706e67">
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/style.css">
   <!--<link rel="shortcut icon" href="favicon.ico">-->
